# fastuidraw

./: .gitignore  CLIPPING.txt  CMakeLists.txt  COPYING  HACKING.txt  ISSUES.txt  Makefile  Makefile.base.lib  Makefile.base.lib.mk  Makefile.base.pre.mk  Makefile.clean  Makefile.demo.rules  Makefile.demo.rules.mk  Makefile.demo.sources.mk  Makefile.docs.mk  Makefile.emscripten  Makefile.functions  Makefile.gl_backend.lib  Makefile.gl_backend.lib.mk  Makefile.gl_backend.pre  Makefile.gl_backend.pre.mk  Makefile.gl_backend.rules  Makefile.gl_backend.settings  Makefile.gl_backend.settings.mk  Makefile.install  Makefile.install.mk  Makefile.lib  Makefile.rules  Makefile.settings  Makefile.settings.mk  Makefile.sources  README.emscripten  README.md  README.painter_cells.ports.txt  TODO.txt  bench.sh  benchmark-switch.sh  example-benchmark-many-options-seperate.sh  example-benchmark.sh  fastuidraw-backend.pc.in  (+4 more)
demos/: CMakeLists.txt  Rules.mk
demos/atlas_tests/: Rules.mk
demos/atlas_tests/glyph_test/: CMakeLists.txt  main.cpp
demos/atlas_tests/gradient_test/: CMakeLists.txt  Rules.mk  main.cpp
demos/atlas_tests/image_test/: CMakeLists.txt  Rules.mk  main.cpp
demos/common/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.hpp  PainterWidget.cpp  PainterWidget.hpp  PanZoomTracker.cpp  PanZoomTracker.hpp  Rules.mk  ScaleTranslate.hpp  bounding_box.hpp  cast_c_array.hpp  colorstop_command_line.cpp  colorstop_command_line.hpp  command_line_list.hpp  cycle_value.cpp  cycle_value.hpp  egl_gles_context.cpp  egl_gles_context.hpp  egl_helper.cpp  egl_helper.hpp  generic_command_line.cpp  generic_command_line.hpp  generic_hierarchy.cpp  generic_hierarchy.hpp  ostream_utility.hpp  path_util.cpp  path_util.hpp  print_utils.hpp  random.cpp  random.hpp  read_colorstops.cpp  read_colorstops.hpp  read_dash_pattern.cpp  read_dash_pattern.hpp  read_path.cpp  read_path.hpp  sdl_benchmark.cpp  sdl_benchmark.hpp  sdl_demo.cpp  sdl_demo.hpp  (+8 more)
demos/common/shaders/: Rules.mk
demos/glyph_test/: Rules.mk  main.cpp
demos/glyph_test/shaders/: curvepair_glyph.frag.glsl.resource_string  glyph.vert.glsl.resource_string  glyph_atlas.vert.glsl.resource_string
demos/gradient_test/: main.cpp
demos/gradient_test/shaders/: draw_pt.frag.glsl.resource_string  linear_gradient.frag.glsl.resource_string  linear_gradient.vert.glsl.resource_string
demos/image_test/: main.cpp
demos/image_test/shaders/: Rules.mk  atlas_image_blit.frag.glsl.resource_string  atlas_image_blit.vert.glsl.resource_string  layer_texture_blit.frag.glsl.resource_string  layer_texture_blit.vert.glsl.resource_string
demos/painter_cells/: CMakeLists.txt  Rules.mk  cell.cpp  cell.hpp  cell_group.cpp  cell_group.hpp  main.cpp  table.cpp  table.hpp
demos/painter_clippath_test/: CMakeLists.txt  Rules.mk  main.cpp
demos/painter_cliprect_test/: CMakeLists.txt  Rules.mk  main.cpp
demos/painter_custom_brush_test/: Rules.mk  custom_brush_example.frag.glsl.resource_string  custom_brush_example.vert.glsl.resource_string  main.cpp
demos/painter_glyph_test/: CMakeLists.txt  Rules.mk  extended_alphabet.txt  glyph_finder.cpp  glyph_finder.hpp  glyph_hierarchy.cpp  glyph_hierarchy.hpp  interval_finder.hpp  main.cpp  show_atlas.frag.glsl.resource_string  show_atlas.vert.glsl.resource_string
demos/painter_path_test/: CMakeLists.txt  Rules.mk  main.cpp
demos/painter_simple_test/: Rules.mk  main.cpp
demos/painter_test/: CMakeLists.txt  Rules.mk  main.cpp
demos/painter_test/shaders/: Rules.mk  vert0.glsl.resource_string  vert1.glsl.resource_string
demos/tutorial/: Rules.mk
demos/tutorial/brush/: Rules.mk  example_brush.cpp
demos/tutorial/common/: Makefile  Rules.mk  demo_framework.cpp  demo_framework.hpp  example_framework.cpp  example_framework.hpp  image_loader.cpp  image_loader.hpp  initialization.cpp  initialization.hpp  initialization_main.cpp
demos/tutorial/custom_brush/: Rules.mk  example_custom_brush.cpp
demos/tutorial/custom_path_shading/: Rules.mk  example_custom_path_shading.cpp
demos/tutorial/gradient/: Rules.mk  example_gradient.cpp
demos/tutorial/image/: Rules.mk  example_image.cpp
demos/tutorial/packed_value/: Rules.mk  example_packed_value.cpp
demos/tutorial/path/: Rules.mk  example_path.cpp
demos/tutorial/path2/: Rules.mk  example_path2.cpp
demos/tutorial/text/: Rules.mk  example_text.cpp
src/fastuidraw/: CMakeLists.txt  Rules.mk  arc_tessellated_path.cpp  colorstop.cpp  colorstop_atlas.cpp  egl_binding.cpp  filled_path.cpp  image.cpp  partitioned_tessellated_path.cpp  path.cpp  path_dash_effect.cpp  path_effect.cpp  stroked_path.cpp  tessellated_path.cpp
src/fastuidraw/gl_backend/: Rules.mk  colorstop_atlas_gl.cpp  gl_binding.cpp  gl_context_properties.cpp  gl_get.cpp  gl_program.cpp  gluniform_implement.cpp  glyph_atlas_gl.cpp  image_gl.cpp  opengl_trait.cpp  painter_backend_factory_gl.cpp  painter_backend_gl.cpp  painter_blend_shader_gl.cpp  painter_engine_gl.cpp  painter_item_shader_gl.cpp  painter_shader_gl.cpp  texture_image_gl.cpp
src/fastuidraw/glsl/: Rules.mk  painter_backend_glsl.cpp  painter_blend_shader_glsl.cpp  painter_composite_shader_glsl.cpp  painter_item_shader_glsl.cpp  painter_shader_registrar_glsl.cpp  shader_code.cpp  shader_source.cpp  unpack_source_generator.cpp  varying_list.cpp
src/fastuidraw/internal/: Rules.mk
src/fastuidraw/ngl/: Rules.mk
src/fastuidraw/ngl_generator/: .gitignore  CMakeLists.txt  HeaderCreator.cpp  HeaderCreator.hpp  Rules.mk  filter.cpp  gl_flex.fl.cpp
src/fastuidraw/painter/: Rules.mk  arc_stroked_point.cpp  fill_rule.cpp  filled_path.cpp  glyph_run.cpp  glyph_sequence.cpp  inplace_madness.hpp  painter.cpp  painter_attribute_data.cpp  painter_attribute_data_filler_glyphs.cpp  painter_attribute_data_filler_path_fill.cpp  painter_attribute_data_filler_path_stroked.cpp  painter_blend_shader_set.cpp  painter_brush.cpp  painter_clip_equations.cpp  painter_composite_shader_set.cpp  painter_custom_brush_shader_data.cpp  painter_dashed_stroke_params.cpp  painter_dashed_stroke_shader_set.cpp  painter_effect.cpp  painter_effect_color_modulate.cpp  (+19 more)
(+4713 files in other folders)
